--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,9 @@
 kotlin.code.style=official
+
+systemProp.org.gradle.internal.http.connectionTimeout=180000
+systemProp.org.gradle.internal.http.socketTimeout=180000
+
+org.gradle.daemon=true
+org.gradle.parallel=true
+org.gradle.configureondemand=true
+org.gradle.jvmargs=-Xmx16384m
